@@ -1,2 +1,0 @@
-python-gi: package-name-doesnt-match-sonames *
-python-gi: dev-pkg-without-shlib-symlink *
