@@ -1,1 +1,0 @@
-python3-gi-dbg: package-name-doesnt-match-sonames *
