@@ -1,1 +1,0 @@
-pygobject source: dbg-package-missing-depends python-gobject-dbg
